Fixed the help menu to expand with scrollbar

--- a/blur-admin/app/assets/stylesheets/help.scss
+++ b/blur-admin/app/assets/stylesheets/help.scss
@@ -3,6 +3,7 @@
 #help-window{
   overflow: auto;
   height: 600px;
+	max-width: 500px;
   .help-section{
     cursor: pointer;
     margin: 2px;
